[FIX] mail: chat bubble preview arrow looks nicer
When mouse-hovering a folded chat window (bubble), it shows
a preview of last message in a rounded container with arrow.

Before this commit, the arrow color did not match the preview,
and it was not overlapping the border of preview. Because of
this, border was not defined on the side of arrow.

This commit fixes the issue by ensuring arrow is overlaps the
border of message preview, so that the whole preview can have a
border. Also, the arrow now matches preview background color.

X-original-commit: f5adbecbd32e51ddf2e2db19269c319beb417f89
Part-of: odoo/odoo#173448

--- a/addons/mail/static/src/core/common/chat_bubble.scss
+++ b/addons/mail/static/src/core/common/chat_bubble.scss
@@ -57,6 +57,17 @@
     max-width: 225px;
     right: $o-mail-ChatHub-bubblesWidth;
     z-index: $o-mail-ChatBubble-zindex - 1;
+
+    & + .popover-arrow {
+        // puts arrow above preview border
+        &::before {
+            right: 1px !important;
+        }
+        &::after {
+            border-left-color: $o-view-background-color !important;
+            right: 2px !important;
+        }
+    }
 }
 
 .o-mail-ChatBubble-status {
